--- a/css/sub.css
+++ b/css/sub.css
@@ -288,8 +288,12 @@ body { font-family: 'Pretendard'; font-size: 1.6rem; color: #333; line-height: 1
 
 /* hotel */
 .hotel { width: calc(100% - 435px); }
-.hotel .h_list { height: 500px; width: 100%; border: 1px solid #ddd; padding: 40px; display: flex; justify-content: space-between; align-items: flex-start; }
+.hotel .h_list { height: 500px; width: 100%; border: 1px solid #ddd; padding: 40px; display: flex; justify-content: space-between; align-items: flex-start; margin-bottom: 20px; transition: box-shadow 0.3s, background 0.3s; cursor: pointer; }
+.hotel .h_list:hover { box-shadow: 2px 2px 8px rgba(0,0,0,0.1); background: #fff; }
 .hotel .h_list .h_img1 { position: relative; width: 50%; height: 420px; }
+.hotel .h_list .h_img1 .swiper-button-prev { transform: scale(0.8); color: #fff; }
+.hotel .h_list .h_img1 .swiper-button-next { transform: scale(0.8); color: #fff; text-shadow: 1px 1px 5px rgba(0,0,0,0.5); }
+.hotel .h_list .h_img1 .swiper-pagination-bullet { background: #fff; }
 .hotel .h_list .h_img1 img { width: 100%; height: 100%; object-fit: cover; }
 
 .hotel .h_list .h_img1 .heart { width: 24px; position: absolute; left: 20px; top: 20px; z-index: 9; }
@@ -299,7 +303,7 @@ body { font-family: 'Pretendard'; font-size: 1.6rem; color: #333; line-height: 1
 .hotel .h_list .h_info .title_wrap { display: flex; justify-content: space-between; margin-bottom: 60px; }
 .hotel .h_list .h_info .h_title h3 { margin-bottom: 4px; font-size: 1.8rem; }
 .hotel .h_list .h_info .h_level { text-align: right; }
-.hotel .h_list .h_info .h_level .review { background: url(../images/common/icon_score.svg) no-repeat 0 center; padding-left: 30px; }
+.hotel .h_list .h_info .h_level .review { background: url(../images/common/icon_score.svg) no-repeat 0 center; padding-left: 30px; margin-bottom: 8px; }
 
 .hotel .h_list .h_info .site { width: 100%; height: 80px; border-radius: 10px; border: 1px solid #ddd; padding: 25px; margin-bottom: 20px; }
 .hotel .h_list .h_info div.site:last-child { margin-bottom: 0; }
@@ -311,6 +315,8 @@ body { font-family: 'Pretendard'; font-size: 1.6rem; color: #333; line-height: 1
 .hotel .h_list .h_info .site p:nth-of-type(3)::before { content: ''; display: block; width: 1px; height: 80px; position: absolute; left: -20px; top: -24px; background: #ddd; }
 .hotel .h_list .h_info .site p:nth-of-type(3) span { font-size: 1.6rem; }
 
+.hotel .btn_more { background: #2babe3; color: #fff; border: 1px solid #2babe3; text-align: center; cursor: pointer; padding: 20px 0; border-radius: 5px; transition: background 0.5s, color 0.5s; }
+.hotel .btn_more:hover { background: #fff; color: #2babe3; }
 
 
 
